# ionata-django-skeleton

./: .example.env  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  docker-compose.yaml  example.env  ionata.yaml  mypy.ini  pyproject.toml
conf/docker/: Dockerfile  bucket_policy.json  nginx-fpr.conf  nginx-index.conf  nginx-spa.conf  nginx.conf
conf/nginx/: default
conf/systemd/: production_celery.service  production_celery_prometheus_exporter.service  production_celerybeat.service  production_gunicorn.service
src/: manage.py
src/users/: __init__.py  admin.py  apps.py  managers.py  models.py  serializers.py  tests.py  views.py
src/users/drf/: serializers.py
src/users/migrations/: 0001_initial.py  __init__.py
src/users/tests/: __init__.py  factories.py  schemas.py  test_sessions.py  test_users.py
src/webapp/: __init__.py  api.py  apps.py  base_test_case.py  celery.py  pagination.py  routes.py  settings.py  signals.py  storage.py  tasks.py  urls.py  views.py  wsgi.py
src/webapp/management/commands/: setup_skeletons.py
src/webapp/templates/: base_email.html
src/webapp/templates/axes/: admin_lockout.html  lockout_admin_email.html  lockout_admin_email.txt
src/webapp/templates/registration/: password_reset_email.html  password_reset_email.txt  password_reset_subject.txt
src/webapp/test/: __init__.py  base.py  matchers.py  schemas.py
src/webapp/tests/: __init__.py  base.py  matchers.py  schemas.py  test_pagination.py  test_schema.py  test_setup_skeletons.py
