[tool.poetry]
# TODO: update the name and description
name = "ionata-django-skeleton"
version = "0.1.0"
description = ""
authors = ["Ionata Digital <webmaster@ionata.com.au>"]

[tool.poetry.dependencies]
python = "^3.7"
celery = { version = "^5.1.0", extras = ["redis"] }
celery-prometheus-exporter = "^1.7.0"
dj-rest-auth = "^2.1.5"
django = "^3.2.3"
django-allauth = "^0.44.0"
django-anymail = { version = "^8.3.0", extras = ["mailgun"] }
django-axes = "^5.16.0"
django-celery-beat = "^2.2.0"
django-celery-results = "^2.0.1"
django-cors-headers = "^3.7.0"
django-environ = "^0.4.5"
django-extensions = "^3.1.3"
django-filter = "^2.4.0"
django-redis = "~=4.12.1"  # does not follow semver
django-storages = { version = "^1.11.1", extras = ["boto3"] }
djangorestframework = "~=3.12.4"  # does not follow semver
djangorestframework-jsonapi = "^4.2.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.8.6"
python-dateutil = "^2.8.1"
pytz = "^2021.1"
pyyaml = "^5.4.1"  # not used directly; needed for DRF schemas
sentry-sdk = "^1.1.0"
uritemplate = "^3.0.1"  # not used directly; needed for DRF schemas

[tool.poetry.dev-dependencies]
# debugging
django-debug-toolbar = "^3.2.1"
ipdb = "^0.13.8"
ipython = "^7.23.1"
ptpython = "^3.0.17"
# linting
autopep8 = "^1.5.7"
django-stubs = "~=1.8.0"  # keep in sync with mypy compatible version
mypy = "^0.812"
pycodestyle = "^2.7.0"
pydocstyle = "^6.1.1"
pylint = "^2.8.2"
pylint-django = "^2.4.4"
rope = "^0.19.0"
# formatting
black = { version = "^21.5b1", allow-prereleases = true }
isort = { version = "^5.8.0", extras = ["pyproject"] }
pre-commit = "^2.13.0"
# testing
factory_boy = "^3.2.0"
pyhamcrest = "^2.0.2"
pytest = "^6.2.4"
pytest-django = "^4.3.0"
tblib = "^1.7.0"
# running
werkzeug = "^2.0.1"

[tool.isort]
# this configuration makes isort and black compatible
# https://black.readthedocs.io/en/stable/the_black_code_style.html#how-black-wraps-lines
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pylint.master]
load-plugins = "pylint_django"

[tool.pylint."messages control"]
disable = "bad-continuation,too-many-ancestors,too-few-public-methods,duplicate-code"
enable = "useless-suppression"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
